--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -39,7 +39,7 @@ services:
         driver: fluentd
         options:
           fluentd-address: localhost:24224
-          tag: nginx.access.
+          tag: nginx.access.test
     ports:
       - 80:80
     depends_on:
