Add instance service account

--- a/.env_template
+++ b/.env_template
@@ -1,2 +1,4 @@
 YC_GROUP_ID=<<You YC_GROUP_ID>>
 RESTART_POLICY=always
+YC__AUTHORIZATION=instance-service-account
+FLUENTBIT_PORT=${FLUENTBIT_PORT}
