--- a/conf/output.conf
+++ b/conf/output.conf
@@ -3,4 +3,4 @@
     Match           *
     group_id        ${YC_GROUP_ID}
     message_key     log
-    authorization   iam-key-file:/etc/secret/key.json
+    authorization   ${YC__AUTHORIZATION}
