--- a/docker-compose_instance-service-account.yaml
+++ b/docker-compose_instance-service-account.yaml
@@ -11,8 +11,8 @@ services:
         reservations:
           memory: 50M
     ports:
-      - 24224:24224
-      - 24224:24224/udp
+      - ${FLUENTBIT_PORT:-24224}:24224
+      - ${FLUENTBIT_PORT:-24224}:24224/udp
     restart: ${RESTART_POLICY-always}
     security_opt:
       - no-new-privileges:true
@@ -24,4 +24,3 @@ services:
       - ./conf/input.conf:/fluent-bit/etc/input.conf
       - ./conf/output.conf:/fluent-bit/etc/output.conf
       - ./conf/parsers.conf:/fluent-bit/etc/parsers.conf
-      - ./key.json:/etc/secret/key.json
